<resources>
    <string name="app_name">LoveCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="try_again">Try Again</string>
    <string name="hundred_percentage">100%</string>
    <string name="your_score">Your Score</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="_100">100</string>
    <string name="equal">=</string>
    <string name="back">Back</string>
    <string name="history">History</string>
</resources>