<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:orientation="vertical">


    
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:id="@+id/appNameEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/love_calculator"
        android:textColor="@color/logo"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculatorBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="80dp"
        android:text="@string/calculate"
        android:backgroundTint="@color/logo"
        />

</LinearLayout>